syntax = "proto3";
package bluzelle.curium.storage;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/bluzelle/curium/x/storage/types";

// GenesisState defines the storage module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
}
